# MobileAgentAI

./: .gitignore  .gitmodules  AGENTS.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-catalog-check.txt  task-10-room-schema.txt  task-11-storage.txt  task-12-repo-check.txt  task-13-hilt-check.txt  task-14-service-check.txt  task-15-worker-check.txt  task-16-usecases.txt  task-2-cmake-flags.txt  task-3-manifest-check.txt  task-30-workflow-validation.txt  task-4-types-check.txt  task-5-theme-check.txt  task-6-cmake-check.txt  task-7-cpp-flags.txt  task-8-jni-bridge.txt  task-9-template-check.txt
.sisyphus/notepads/: learnings.md
.sisyphus/notepads/mobile-llm-app/: learnings.md
.sisyphus/plans/: mobile-llm-app.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/llamaapp/: AGENTS.md  LlamaApplication.kt  MainActivity.kt
app/src/main/java/com/example/llamaapp/di/: AppModule.kt
app/src/main/java/com/example/llamaapp/engine/: Qwen3ChatTemplate.kt  ThinkTagParser.kt
app/src/main/java/com/example/llamaapp/navigation/: AppNavigation.kt
app/src/main/java/com/example/llamaapp/service/: InferenceService.kt
app/src/main/java/com/example/llamaapp/storage/: ModelStorageManager.kt
app/src/main/res/values/: colors.xml  strings.xml
gradle/: libs.versions.toml
lib/: AGENTS.md  build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
lib/src/main/java/com/example/llama/: LlamaEngine.kt
(+33 files in other folders)
